# E-commerce

./: .gitignore  CHATBOT-SETUP.md  README.md  docker-compose.yaml  run-integration-tests.ps1
Backend/: .gitignore  Dockerfile  MICROSERVICES.md  README.md  SETUP.md  add-sample-products.ps1  health_check.py  main.py  pyproject.toml  pytest.ini  run_integration_tests.py  test_integration.py
Backend/src/: container.py
Backend/src/api_gateway/: Dockerfile  __init__.py  main.py
Backend/src/application/dtos/: __init__.py
Backend/src/cart_service/: ARCHITECTURE.md  Dockerfile  README.md  README_NEW.md  __init__.py  container.py  init_data.py  main.py  migrate_remove_products.py  test_cart_service.py
Backend/src/delivery_service/: Dockerfile  __init__.py  container.py  main.py
Backend/src/domain/entities/: __init__.py  base.py
Backend/src/order_service/: Dockerfile  container.py  main.py
Backend/src/order_validation_service/: Dockerfile  main.py
Backend/src/payment_service/: Dockerfile  container.py  main.py
Backend/src/product_service/: Dockerfile  add_image_column_migration.py  container.py
Backend/src/user_service/: Dockerfile  container.py  main.py
Backend/tests/: conftest.py
Backend/tests/integration/: README.md  test_api_integration.py  test_cart_service.py  test_cart_service_simple.py  test_delivery_service.py  test_hybrid_integration.py  test_order_service.py  test_payment_service.py  test_product_service.py  test_product_service_simple.py  test_simple_integration.py  test_user_service.py  test_user_service_simple.py
Frontend/: .env.example  (+8 more)
(+301 files in other folders)
